--- a/css/style.css
+++ b/css/style.css
@@ -171,19 +171,27 @@ html, body {
 
 
 }
-
-.women_category{
+.women_category img{
+	max-width: 100%;
+}
+.women_category img{
 	flex-grow: 2;
-	max-width: 50%;
-	max-height: 50%;
-	
+	max-width: 100%;
+	height: 50%	
 }
 
+.trend_category img{
+	max-width: 100%;
+}
 .trend_category{
 	width: 25%;
 	border-style: solid;
 	border-color: white;
 	border-width: 2px;
+}
+
+.glasses_category img{
+	max-width: 100%;
 }
 
 .glasses_category{
@@ -193,6 +201,9 @@ html, body {
 	border-width: 2px;
 }
 
+.sales_category img{
+	max-width: 100%;
+}
 .sales_category{
 	width: 25%;
 	border-style: solid;
@@ -200,6 +211,9 @@ html, body {
 	border-width: 2px;
 }
 
+.bags_category img{
+	max-width: 100%;
+}
 .bags_category{
 	width: 25%;
 	border-style: solid;
@@ -207,9 +221,14 @@ html, body {
 	border-width: 2px;
 }
 
+.men_category img{
+	max-width: 100%;
+}
+
 .men_category{
 	flex-grow: 2;
-	width: 50%;
+	max-width: 50%;
+	height: auto;
 }
 
 /*Products Section*/
