--- a/css/style.css
+++ b/css/style.css
@@ -173,17 +173,15 @@ html, body {
 }
 .women_category img{
 	max-width: 100%;
-}
-.women_category img{
+
 	flex-grow: 2;
 	max-width: 100%;
-	height: 50%	
+	height: 50%;	
 }
 
 .trend_category img{
 	max-width: 100%;
-}
-.trend_category{
+
 	width: 25%;
 	border-style: solid;
 	border-color: white;
@@ -192,9 +190,7 @@ html, body {
 
 .glasses_category img{
 	max-width: 100%;
-}
 
-.glasses_category{
 	width: 25%;
 	border-style: solid;
 	border-color: white;
@@ -203,8 +199,7 @@ html, body {
 
 .sales_category img{
 	max-width: 100%;
-}
-.sales_category{
+
 	width: 25%;
 	border-style: solid;
 	border-color: white;
@@ -213,8 +208,7 @@ html, body {
 
 .bags_category img{
 	max-width: 100%;
-}
-.bags_category{
+
 	width: 25%;
 	border-style: solid;
 	border-color: white;
@@ -223,9 +217,7 @@ html, body {
 
 .men_category img{
 	max-width: 100%;
-}
 
-.men_category{
 	flex-grow: 2;
 	max-width: 50%;
 	height: auto;
